--- a/imcjava/pom.xml
+++ b/imcjava/pom.xml
@@ -6,13 +6,19 @@
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>imcjava Maven Webapp</name>
+  <properties>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
-      <scope>test</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
 			<groupId>javax.servlet</groupId>
@@ -25,15 +31,23 @@
     <finalName>imcjava</finalName>
      <!-- Para usar o projeto com o Tomcat -->
   	<plugins>
-  		<plugin>
-  			<groupId>org.apache.tomcat.maven</groupId>
-  			<artifactId>tomcat7-maven-plugin</artifactId>
-  			<version>2.2</version>
-  			<configuration>
-  				<port>9090</port>
-  			</configuration>
-  		</plugin>
-  	</plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<port>9090</port>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+		</plugins>
   
   </build>
 </project>
